# libaermre

./: .gitignore  AUTHORS.txt  CMakeLists.txt  Doxyfile  Makefile  Makefile.bak  NOTICE.txt  README.md  VERSION.txt.in
ACKNOWLEDGMENTS/libfoxutils/: LICENSE.txt  NOTICE.txt
ACKNOWLEDGMENTS/tomlc99/: LICENSE.txt
cmake/: FindBTreeC.cmake  FindFoxutils.cmake  FindTomlc99.cmake
docs/: main.md  objects.md
include/: aerlog.h  aermodman.h  aermre.h  aerobjects.h  aerrand.h  dynarr.h  eventkey.h  eventtrap.h  hashtab.h  hld.h  modman.h  objtree.h  utilmacs.h  xorshift.h
include/aer/: envconf.h  err.h  instance.h  log.h  modman.h  mre.h  object.h  objects.h  rand.h  room.h  sprite.h
include/internal/: confvars.h  envconf.h  err.h  eventtrap.h  hld.h  modman.h  mre.h  objtree.h
include/private/: eventkey.h  eventtrap.h  hld.h  modman.h  objtree.h  utilmacs.h  xorshift.h
include/private/internal/: audio.h  conf.h  confman.h  confvars.h  core.h  envconf.h  err.h  event.h  eventkey.h  eventtrap.h  hld.h  input.h  instance.h  iter.h  log.h  mod.h  modman.h  mre.h  object.h  objtree.h  option.h  primitive.h  rand.h  room.h  save.h  sprite.h
include/public/aer/: audio.h  conf.h  confman.h  core.h  draw.h  envconf.h  err.h  event.h  eventtrap.h  font.h  input.h  instance.h  iter.h  log.h  mod.h  modman.h  mre.h  object.h  primitive.h  rand.h  room.h  save.h  sprite.h  window.h
src/: aerlog.c  aermodman.c  aermre.c  aerrand.c  audio.c  conf.c  confman.c  confvars.c  core.c  draw.c  dynarr.c  envconf.c  err.c  event.c  eventkey.c  eventtrap.c  font.c  hashtab.c  hld.c  input.c  instance.c  iter.c  log.c  mod.c  modman.c  mre.c  object.c  objtree.c  option.c  primitive.c  rand.c  room.c  save.c  sprite.c  window.c
src/aer/: mre.c  rand.c
src/internal/: eventkey.c  eventtrap.c  objtree.c
src/private/: eventkey.c  eventtrap.c  hld.c  modman.c  objtree.c
